<resources>
    <string name="app_name">Know Wealth</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="user_id">User Id</string>
    <string name="enter_name">Enter name</string>
    <string name="email">Email</string>
    <string name="password_dots">••••••••</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="top_header">Top header</string>
    <string name="arrow_button">arrow button</string>
    <string name="back_arrow">back arrow</string>
    <string name="bottom_header">bottom header</string>
    <string name="know_wealth_top">Know Wealth top</string>
    <string name="main_logo">main logo</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="button_arrow">button arrow</string>
    <string name="user_id_icon">user ID icon</string>
    <string name="password_icon">password icon</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="this_weeks_due_dates">This weeks due dates</string>

    <string name="projected_budget">Projected budget</string>
    <string name="expended">Expended</string>

    <string name="add_expense">Add Expense</string>


    <string name="skip">Skip</string>
    <string name="plus_sign_on_add_button">plus sign on add button</string>
    <string name="add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="Utilities">
        <item>Mortgage / Rent</item>
        <item>Power</item>
        <item>Water</item>
        <item>Gas</item>
        <item>Internet</item>
        <item>Cell Phone</item>
        <item>Home Phone</item>
        <item>Other</item>
    </string-array>
    <string-array name="MonthDays">
        <item>every 1<sup>st</sup></item>
        <item>every 2<sup>nd</sup></item>
        <item>every 3<sup>rd</sup></item>
        <item>every 4<sup>th</sup></item>
        <item>every 5<sup>th</sup></item>
        <item>every 6<sup>th</sup></item>
        <item>every 7<sup>th</sup></item>
        <item>every 8<sup>th</sup></item>
        <item>every 9<sup>th</sup></item>
        <item>every 10<sup>th</sup></item>
        <item>every 11<sup>th</sup></item>
        <item>every 12<sup>th</sup></item>
        <item>every 13<sup>th</sup></item>
        <item>every 14<sup>th</sup></item>
        <item>every 15<sup>th</sup></item>
        <item>every 16<sup>th</sup></item>
        <item>every 17<sup>th</sup></item>
        <item>every 18<sup>th</sup></item>
        <item>every 19<sup>th</sup></item>
        <item>every 20<sup>th</sup></item>
        <item>every 21<sup>st</sup></item>
        <item>every 22<sup>nd</sup></item>
        <item>every 23<sup>rd</sup></item>
        <item>every 24<sup>th</sup></item>
        <item>every 25<sup>th</sup></item>
        <item>every 26<sup>th</sup></item>
        <item>every 27<sup>th</sup></item>
        <item>every 28<sup>th</sup></item>
        <item>every 29<sup>th</sup></item>
        <item>every 30<sup>th</sup></item>
        <item>every 31<sup>st</sup></item>
    </string-array>
    <string name="account">Account</string>
    <string name="utilities">Utilities</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="budget">Budget</string>
    <string name="notifications">Notifications</string>
    <string name="sign_out">Sign out</string>
    <string name="close_button">close_button</string>
    <string name="paid">Paid</string>
    <string name="due_date">Due date</string>
    <string name="_1">1</string>
    <string name="f">F</string>
    <string name="th">Th</string>
    <string name="w">W</string>
    <string name="t">T</string>
    <string name="m">M</string>
    <string name="s">S</string>
    <string name="due_dates">Due Dates</string>
    <string name="month">Month</string>
    <string name="menu_button">Menu_button</string>
    <string name="back_arrow_calendar"><![CDATA[<]]></string>
    <string name="next_arrow_calendar"><![CDATA[>]]></string>
    <string name="account_info">Account Info</string>
    <string name="Home">Home</string>
    <string name="bankLinkInstructions">
        "   Let's link your bank accounts to add your expenses automatically.\n
            Here are some instructions:\n
        1- Click the button below to fetch
            your accounts.\n
        2- Select the accounts you want to
            link to the app.\n
        3- Click the Link button to connect
            your accounts.\n
    See, easy as 1, 2, and 3..."</string>
</resources>