<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/calendarLayout"
    tools:context=".DueDatesCalendar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="414dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/calBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/dueDateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="6dp"
                android:layout_weight="2"
                android:text="@string/due_dates"
                android:textColor="@color/main_color"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/calBar"
            android:layout_width="414dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/calRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/s"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/m"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/t"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/w"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/th"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/f"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/s"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calRecyclerView"
            android:layout_width="414dp"
            android:layout_height="240dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datesCalendarHeader"
            app:layout_constraintVertical_bias="0.45" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="414dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datesCalendarHeader">

            <TextView
                android:id="@+id/monthLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_weight="2"
                android:text="@string/month"
                android:textColor="@color/main_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="previousMonthAction"
                android:text="@string/back_arrow_calendar"
                android:textColor="@color/main_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:background="@null"
                android:onClick="nextMonthAction"
                android:text="@string/next_arrow_calendar"
                android:textColor="@color/main_color"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="414dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/items_List"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/items_List"
            app:layout_constraintTop_toBottomOf="@+id/calRecyclerView"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/selectedDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/due_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:text="@string/paid"
                android:textAlignment="center"
                android:textColor="@color/main_color"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items_List"
            android:layout_width="414dp"
            android:layout_height="144dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <ImageView
            android:id="@+id/datesCalendarHeader"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:contentDescription="@string/top_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/main_header" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/datesCalendarHeader"
            app:layout_constraintEnd_toEndOf="@+id/datesCalendarHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/datesCalendarHeader"
            app:srcCompat="@drawable/group_1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:layout_weight="0.25"
            android:contentDescription="@string/menu_button"
            android:foreground="@drawable/ic_baseline_menu_24"
            android:foregroundTint="@color/white"
            android:onClick="Menu"
            android:paddingStart="0dp"
            android:paddingEnd="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/datesCalendarHeader"
            app:layout_constraintEnd_toEndOf="@+id/datesCalendarHeader"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/datesCalendarHeader"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_menu_24"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>