<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProcessingScreens"
    tools:ignore="ExtraText">
    tools:ignore="RtlSymmetry"

    <ImageView
        android:id="@+id/processingHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:contentDescription="@string/top_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_header" />

    <ImageView
        android:id="@+id/processingChin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:contentDescription="@string/top_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/main_header" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Know Wealth top"
        app:layout_constraintBottom_toBottomOf="@+id/processingHeader"
        app:layout_constraintEnd_toEndOf="@+id/processingHeader"
        app:layout_constraintStart_toStartOf="@+id/processingHeader"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_1"
        tools:ignore="UnknownIdInLayout" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/utilities"
        android:textColor="@color/main_color"
        android:textSize="34sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/utilityDueDatesList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/processingHeader" />

    <ImageView
        android:id="@+id/backArrow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/processingHeader"
        app:layout_constraintEnd_toEndOf="@+id/processingHeader"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/processingHeader"
        app:layout_constraintTop_toTopOf="@+id/processingHeader"
        app:srcCompat="@drawable/arrow" />

    <Button
        android:id="@+id/addButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="261dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/main_button"
        android:clipToOutline="false"
        android:contextClickable="false"
        android:paddingStart="20dp"
        android:stateListAnimator="@android:anim/accelerate_decelerate_interpolator"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/processingChin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/plus_sign_on_add_button"
        app:layout_constraintBottom_toBottomOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="@+id/addButton"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="@+id/addButton"
        app:layout_constraintTop_toTopOf="@+id/addButton"
        app:srcCompat="@drawable/resource__"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/skip_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/processingChin"
        app:layout_constraintEnd_toEndOf="@+id/processingChin"
        app:layout_constraintStart_toStartOf="@+id/processingChin"
        app:layout_constraintTop_toTopOf="@+id/processingChin" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/utilityDueDatesList"
        android:layout_width="match_parent"
        android:layout_height="444dp"
        app:layout_constraintBottom_toTopOf="@+id/processingChin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/processingHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>