<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountEdit">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/main_color"
        app:layout_constraintBottom_toBottomOf="@id/activity_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:contentDescription="@string/back_arrow"
            app:srcCompat="@drawable/arrow" />

        <ImageView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="66dp"
            android:contentDescription="Know Wealth top"
            app:srcCompat="@drawable/group_1" />
    </LinearLayout>

    <TextView
        android:id="@+id/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Account"
        android:textColor="@color/main_color"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias=".05"/>

    <EditText
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/rectangle_122"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textShortMessage|textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="16dp"
        android:singleLine="true"
        android:textColorHint="#800B6374"
        app:layout_constraintBottom_toTopOf="@+id/userIdCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_title"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/userIdCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:background="@drawable/rectangle_122"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textShortMessage|textPassword"
        android:maxLength="30"
        android:maxLines="1"
        android:padding="16dp"
        android:singleLine="true"
        android:textColorHint="#800B6374"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullName" />

    <Button
        android:id="@+id/apply_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="261dp"
        android:layout_height="50dp"
        android:background="@drawable/main_button"
        android:contextClickable="false"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:stateListAnimator="@android:anim/accelerate_decelerate_interpolator"
        android:text="Apply"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIdCreateAccount" />

    <Button
        android:id="@+id/password_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="261dp"
        android:layout_height="50dp"
        android:background="@drawable/main_button"
        android:contextClickable="false"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:stateListAnimator="@android:anim/accelerate_decelerate_interpolator"
        android:text="Reset Password"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_button"
        app:layout_constraintVertical_bias=".1" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/main_color"
        android:orientation="horizontal"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="And/Or"
        app:layout_constraintBottom_toTopOf="@+id/userIdCreateAccount"
        app:layout_constraintStart_toStartOf="@+id/userIdCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

</androidx.constraintlayout.widget.ConstraintLayout>